Fix alignment for icpercentage change

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,4 +17,5 @@ div.shiftdown{
    display: flex;
    justify-content: center;
    flex-direction: row;
+   align-items: center;
 }
